# news_agents

./: README.md  pyproject.toml  report.json  report.md
src/news_agents/: crew.py  main.py
src/news_agents/config/: agents.yaml  tasks.yaml
