[project]
name = "news_agents"
version = "0.1.0"
description = "news_agents using crewAI"
authors = [{ name = "Yaroslav", email = "slasev903@gmail.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.102.0,<1.0.0"
]

[project.scripts]
news_agents = "news_agents.main:run"
run_crew = "news_agents.main:run"
train = "news_agents.main:train"
replay = "news_agents.main:replay"
test = "news_agents.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
